fixed all copyright notices and removed compat.php

--- a/src/gatekeeper/html/add_user_to_group.html
+++ b/src/gatekeeper/html/add_user_to_group.html
@@ -1,9 +1,10 @@
-<!--  $Id: add_user_to_group.html 290 2007-08-22 19:37:33Z rgass $
-/*  OpenDiamond Gatekeeper
- *  An OpenDiamond application the generation of scoping files
+<!--  $Id:$
+/*
+ *  The OpenDiamond Platform for Interactive Search
+ *  Version 3
  *
- *  Copyright (c) 2007  Intel Corporation
- *  All Rights Reserved.
+ *  Copyright (c) 2007 Intel Corporation
+ *  All rights reserved.
  *
  *  This software is distributed under the terms of the Eclipse Public
  *  License, Version 1.0 which can be found in the file named LICENSE.
