Remove gatekeeper dependency on filename for collection name
Now, the sqlite3 files used for metadata lookups no longer are based
by name; all files in the db root directory are checked to see if they
are sqlite3 DB files, and collection names are queried out of them.

--- a/src/gatekeeper/html/scope.html
+++ b/src/gatekeeper/html/scope.html
@@ -4,6 +4,7 @@
  *  Version 3
  *
  *  Copyright (c) 2007 Intel Corporation
+ *  Copyright (c) 2007 Carnegie Mellon University
  *  All rights reserved.
  *
  *  This software is distributed under the terms of the Eclipse Public
@@ -19,7 +20,7 @@
 <table border=0 class=scope>
     <tr>
         <td colspan=2>
-            Setup Scope
+             Define Scope
         </td>
     </tr>
     <tr>
@@ -50,7 +51,7 @@
     <tr>
         <td colspan=2>
             <center>
-            <input type=submit value="Generate Scope">
+            <input type=submit value="Define Scope">
             </center>
         </td>
     </tr>
