--- a/src/gatekeeper/html/left_menu.html
+++ b/src/gatekeeper/html/left_menu.html
@@ -1,9 +1,10 @@
-<!--  $Id:$
+<!--
 /*
  *  The OpenDiamond Platform for Interactive Search
  *  Version 4
  *
  *  Copyright (c) 2007 Intel Corporation
+ *  Copyright (c) 2008 Carnegie Mellon University
  *  All rights reserved.
  *
  *  This software is distributed under the terms of the Eclipse Public
@@ -12,23 +13,10 @@
  *  RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT
  */
 -->
-
-<table>
-    <tr>
-        <td>
-            <hr>
-            <a href=<?php echo $G['WEBROOT']; ?>/index.php?action=define_scope>Define Scope</a><br>
-<?php if ($is_admin == 1) { ?>
-            <hr>
-            <a href=<?php echo $G['WEBROOT']; ?>/index.php?action=add_user>Add a User</a><br>
-            <a href=<?php echo $G['WEBROOT']; ?>/index.php?action=delete_user>Delete a User</a><br>
-            <a href=<?php echo $G['WEBROOT']; ?>/index.php?action=summary>User Summary</a><br>
+<ul>
+<li><a href="<?php echo $G['WEBROOT'] ?>/index.php?action=define_scope">Define Scope</a></li>
+<?php if ($is_admin) { ?>
+<li><a href="<?php echo $G['WEBROOT'] ?>/index.php?action=manage">Manage Users</a></li>
 <?php } ?>
-            <hr>
-            <a href=http://diamond.cs.cmu.edu>OpenDiamond</a><br>
-            <a href=http://isads.intel-research.net>ISADS</a>
-            <hr>
-        </td>
-    </tr>
-</table>
+</ul>
 
