--- a/src/gatekeeper/html/page_layout.html
+++ b/src/gatekeeper/html/page_layout.html
@@ -14,34 +14,19 @@
  */
 -->
 <?php
-    $stylesheet = $G['WEBROOT'] . "/css/gatekeeper_main.css";
-    $favicon = $G['WEBROOT'] . "/images/favicon.ico";
+    $static = $G['WEBROOT'] . "/static";
 ?>
 <html><head><title><?php echo $G['PAGE_TITLE'] ?></title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="<?php echo $stylesheet ?>" />
-<link rel="shortcut icon" href="<?php echo $favicon ?>" />
+<link rel="stylesheet" type="text/css" href="<?php echo $static ?>/gatekeeper.css" />
+<link rel="shortcut icon" href="<?php echo $static ?>/favicon.ico" />
+<script language="javascript" type="text/javascript" src="<?php echo $static ?>/jquery.js"></script>
 <script type="text/javascript">
-function toggle(elem) {
-    while (elem && elem.tagName != 'DD') { elem = elem.nextSibling; }
-    if (!elem) { return; }
-    if (elem.style.display != 'none') { elem.style.display = 'none'; }
-    else { elem.style.display = 'block'; }
-}
-function collapseDLs() {
-    if (!document.getElementsByTagName) { return; }
-    var dls = document.getElementsByTagName('DL');
-    for (var i = 0; i < dls.length; i++) {
-	if (dls[i].className == 'collapse') {
-	    var dts = dls[i].getElementsByTagName('DT');
-	    for (var j = 0; j < dts.length; j++) {
-		dts[j].onclick = new Function('toggle(this); return false;');
-		toggle(dts[j]);
-	    }
-	}
-    }
-}
-window.onload = function () { collapseDLs(); }
+$(function () {
+    $("dl.collapse dt").click(function () {
+	$(this).next('dd').toggle('slow'); return false;
+    });//.next('dd').hide();
+});
 </script>
 </head><body>
 
