--- a/src/gatekeeper/html/scope.html
+++ b/src/gatekeeper/html/scope.html
@@ -19,17 +19,17 @@
     sort($col_list);
 ?>
 <form action="<?php echo $form_url; ?>" method="POST">
-<!-- dl class="collapse">
+<dl class="collapse">
 <dt>Collections</dt>
-<dd -->
+<dd>
 <ul>
 <?php foreach ($col_list as $coll) { ?>
     <li><input type="checkbox" name="coll[]" value="<?php echo $coll; ?>" />
     <?php echo $coll; ?></li>
 <?php } ?>
 </ul>
-<!-- /dd>
-</dl -->
+</dd>
+</dl>
 <input type="submit" value="Define Scope">
 </form>
 
