Gatekeeper user management randomly failed.
We were depending on the order of returned POST arguments, where
the new user textbox would overwrite the selected user.

--- a/src/gatekeeper/html/manage.html
+++ b/src/gatekeeper/html/manage.html
@@ -32,7 +32,7 @@
     }
 ?>
 </select>
-<input type="text" name="username" />
+<input type="text" name="newuser" />
 <ul>
 <?php foreach ($all_collections as $coll) { ?>
     <li><input type="checkbox" name="coll[]" value="<?php echo $coll; ?>" />
